--- a/projects/health_science_calculator.qmd
+++ b/projects/health_science_calculator.qmd
@@ -26,27 +26,20 @@ about:
 ## **Overview**
 
 
-Health Science Calculator is a Python package designed to provide accurate and efficient health metric calculations, including:  
-
-- **Total Daily Energy Expenditure (TDEE)**  
-- **Basal Metabolic Rate (BMR)**  
-- **Body Mass Index (BMI)**  
-- **Unit conversions for health data**  
-
-This project was developed as part of a collaborative effort using best practices in software engineering, automation, and version control to ensure code quality, maintainability, and scalability. This package was designed to be useful for health professionals, researchers, and fitness enthusiasts.
+Health Science Calculator is a Python package designed to provide accurate and efficient health metric calculations. This project was developed as part of a collaborative effort using best practices in software engineering, automation, and version control to ensure code quality, maintainability, and scalability. This package was designed to be useful for health professionals, researchers, and fitness enthusiasts.
 
 Collaborators: Akosua, Jiayi Li, Tengwei Wang
 ---
 
 ## Project Goals & Contributions
 
-- **Developed a modular Python package** for health-related calculations.
-- **Implemented core functions** for BMI, BMR, TDEE, and unit conversion.
-- I**ntegrated Pytest for automated testing**, achieving 100% test coverage.
-- **Implemented GitHub Actions for CI/CD**, enabling automated testing and deployment.
-- **Published the package to PyPI** (`pip install healthsciencecalculator`).
-- **Designed API documentation** using Sphinx and Read the Docs.
-- **Collaborated using Git workflows** (branching, merging, pull requests).
+- Developed a modular Python package for health-related calculations.
+- Implemented core functions for BMI, BMR, TDEE, and unit conversion.
+- Integrated Pytest for automated testing, achieving 100% test coverage.
+- Implemented GitHub Actions for CI/CD, enabling automated testing and deployment.
+- Published the package to PyPI (`pip install healthsciencecalculator`).
+- Designed API documentation using Sphinx and Read the Docs.
+- Collaborated using Git workflows (branching, merging, pull requests).
 
 ---
 
@@ -57,56 +50,22 @@ Collaborators: Akosua, Jiayi Li, Tengwei Wang
 This package includes the following key functions:  
 
 - `get_tdee()`: Calculates Total Daily Energy Expenditure (TDEE) based on BMR and activity level.  
-
 - `get_bmi()`: Computes Body Mass Index (BMI) and classifies users (underweight, normal, overweight, obese). 
-
 - `get_bmr()`: Uses the Harris-Benedict equation to compute Basal Metabolic Rate (BMR).  
-
 - `unit_convert()`: Converts between metric and imperial units for weight, height, temperature, and volume.  
 
 
 Each function was carefully tested to ensure accuracy and reliability.
 
 
-
-### Continuous Integration & Deployment (CI/CD)  
-
-
-This project uses GitHub Actions to automate the development workflow:  
-
-- Automated testing using Pytest on every commit and pull request. 
-- Linting and code style checks with Pylint.  
-- Test coverage tracking with pytest-cov & Codecov.  
-- Automatic deployment to PyPI, ensuring up-to-date releases.  
-
-#### CI/CD Workflow:
-1. Code changes are pushed or a pull request is opened.  
-2. GitHub Actions runs Pytest to validate functionality.  
-3. If all tests pass, the package is automatically deployed to PyPI.  
-
-This setup ensures code stability, early bug detection, and seamless integration.
-
-
-
-### Automated Testing with Pytest  
-
-
-- Comprehensive unit tests for all health calculations.  
-- Edge-case handling*(invalid inputs, zero values, negative values).  
-- Parameterized tests to validate accuracy across different inputs.  
-- Test coverage tracking with pytest-cov, achieving 100% test coverage.
-
-
-
-
 ## Key Takeaways & Impact
 This project strengthened my skills in:  
 
-- **Software Development** → Object-oriented programming, API design.  
-- **Data Processing & Analytics** → Structured data handling, validation.
-- **Automation & CI/CD** → GitHub Actions, Pytest, automated deployments. 
-- **Collaborative Development** → Git version control, team coordination. 
-- **Technical Communication** → API documentation, user guides.  
+- Software Development: Object-oriented programming, API design.  
+- Data Processing & Analytics: Structured data handling, validation.
+- Automation & CI/CD: GitHub Actions, Pytest, automated deployments. 
+- Collaborative Development: Git version control, team coordination. 
+- Technical Communication: API documentation, user guides.  
 
 By developing this package, I gained experience in building scalable and well-tested software solutions, with direct applications in data science, AI, and healthcare analytics.
 
